# listener_v2

./: .cursorrules  README.md  angular.json  package-lock.json  package.json
.claude/: settings.local.json
backend/: README.md  env.example  pyproject.toml  run.py
backend/app/: __init__.py  config.py  main.py  models.py  transcription.py  utils.py
src/: index.html  styles.scss
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
src/app/components/conversation-recorder/: conversation-recorder.component.html  conversation-recorder.component.scss  conversation-recorder.component.ts
src/app/services/: audio-recording.service.ts  suggestion.service.ts
src/app/workers/: audio-processor.worker.ts
